fixed script not showing added run button to scripts

--- a/base/static/base/scss/custom.scss
+++ b/base/static/base/scss/custom.scss
@@ -19,7 +19,7 @@ $orange: #ed8540;
 $yellow: #d6c442;
 $green: #748e54;
 $teal: #44bba4;
-$cyan: #17a2b8;
+$cyan: #188b9c;
 $white: #e9e9e9;
 $gray-100: #f5f5f5;
 $gray-200: #c9cacb;
@@ -32,7 +32,7 @@ $gray-800: #5d6163;
 $gray-900: #4B4F52;
 $black: #393e41;
 $grays: (100: $gray-100, 200: $gray-200, 300: $gray-300, 400: $gray-400, 500: $gray-500, 600: $gray-600, 700: $gray-700, 800: $gray-800, 900: $gray-900);
-$theme-colors: (primary: $blue, secondary: $gray-600, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
+$theme-colors: (primary: $blue, secondary: $gray-600, success: $green, info: $teal, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $colors: (blue: $blue, indigo: $indigo, purple: $purple, pink: $pink, red: $red, orange: $orange, yellow: $yellow, green: $green, teal: $teal, cyan: $cyan, white: $white, gray: $gray-600, gray-dark: $gray-800);
 $theme-color-interval: 8%;
 // Spacing
